--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,20 @@
 [profile.default]
 src = "src"
 out = "out"
+script = 'script'
 libs = ["lib"]
+optimizer = true
+optimizer_runs = 200
+evm_version = 'cancun'
+
+[fuzz]
+runs = 2048
+max_test_rejects = 65536
+seed = '0x3e8'
+
+[etherscan.cartio]
+key = "${ETHERSCAN_API_KEY}"
+chain = 80000
+url = "https://api.routescan.io/v2/network/testnet/evm/80000/etherscan"
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
