--- a/foundry.toml
+++ b/foundry.toml
@@ -17,4 +17,9 @@ key = "${ETHERSCAN_API_KEY}"
 chain = 80000
 url = "https://api.routescan.io/v2/network/testnet/evm/80000/etherscan"
 
+[profile.ci]
+runs = 9216
+max_test_rejects = 65536
+
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
